<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
    android:padding="10dp"
    android:textStyle="bold"
    android:textSize="@dimen/sp_18"
    android:text="@string/customise_you_search_results"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <LinearLayout
        android:padding="10dp"
        android:id="@+id/search_holder"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/search_by"
            android:padding="5dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bt_business_name"
                android:textColor="@color/text_selector"
                android:paddingStart="5dp"
                android:layout_margin="5dp"
                android:gravity="left|center"
                android:background="@drawable/button_bg"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/search_business"
                android:layout_height="0dp" />
            <Button
                android:id="@+id/bt_business_address"
                android:paddingStart="5dp"
                android:textColor="@color/text_selector"
                android:layout_margin="5dp"
                android:gravity="left|center"
                android:background="@drawable/button_bg"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/search_address"
                android:layout_height="0dp" />
            <Button
                android:id="@+id/bt_business_type"
                android:textColor="@color/text_selector"
                android:paddingStart="5dp"
                android:layout_margin="5dp"
                android:gravity="left|center"
                android:background="@drawable/button_bg"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/search_type"
                android:layout_height="0dp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:padding="10dp"
        android:layout_below="@+id/search_holder"
        android:id="@+id/sorting_holder"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/sort_by"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bt_sort_distance"
                android:textColor="@color/text_selector"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:background="@drawable/button_bg"
                android:layout_weight="1"
                android:text="@string/distance"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/bt_sort_rating"
                android:textColor="@color/text_selector"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:background="@drawable/button_bg"
                android:layout_weight="1"
                android:text="@string/ratting"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:padding="10dp"
        android:layout_below="@+id/sorting_holder"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:layout_height="wrap_content" />
        <Button
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_apply"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>